# General-PETS

./: .gitignore  README.md  generate_svgs.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
public/characters/: index.json
settings/: index.html
src/: main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pet/: animation-player.ts  behavior-scheduler.ts  character-loader.ts  character-validator.ts  drag-animation-policy.ts  drag-direction-tracker.ts  facing-controller.ts  floor-controller.ts  interaction-controller.ts  manual-window-drag-controller.ts  motion-controller.ts  pet-controller.ts  pet-state-machine.ts  types.ts  visual-layout.ts
src/settings/: main.ts  settings-controller.ts  settings.css
src/shared/: character-types.ts  defaults.ts  event-names.ts  pet-settings.ts  settings-migration.ts
src/styles/: pet.css
src/tests/: animation-clock.test.ts  character-capabilities.test.ts  character-validator.test.ts  codex-renderer.test.ts  directional-animation-resolver.test.ts  drag-animation-policy.test.ts  hit-area-engine.test.ts  interaction-animation-resolver.test.ts  interaction-executor.test.ts  interaction-recognizer.test.ts  interaction-rule-engine.test.ts  listener-leak.test.ts  manual-window-drag-controller.test.ts  motion-controller.test.ts  natural-interaction.test.ts  pet-controller-lifecycle.test.ts  renderer-speed-persistence.test.ts  settings-migration.test.ts  setup.ts  visual-alpha-hit-test.test.ts  (+1 more)
(+32 files in other folders)
