[package]
name = "general-pets"
version = "0.1.0"
description = "A general desktop pet engine"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-store = "2"
image = { version = "0.25", default-features = false, features = ["png", "webp", "gif"] }
rfd = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
